# pytypehintcheck

./: pyproject.toml  readme.md  ruff.toml  tox.ini  tox.toml
src/pytypehintcheck/: type_info.py  typing.py
src/pytypeinfo/: type_info.py  typing.py
tests/: test_annotated.py  test_callable.py  test_classVar.py  test_isAny.py  test_isType.py  test_literal.py  test_mapping.py  test_typeVar.py  test_types.py  test_union.py
